--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "hammerjs": "^2.0.8",
+    "hoek": "^5.0.3",
     "http-status": "^1.1.2",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.2.1",
@@ -57,6 +58,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.5",
     "@angular/cli": "6.0.5",
     "@types/jasmine": "2.8.7",
     "@types/node": "10.1.3",
@@ -64,17 +66,13 @@
     "jasmine": "3.1.0",
     "jasmine-core": "3.1.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "2.0.2",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
     "karma-coverage-istanbul-reporter": "2.0.1",
-    "karma-jasmine": "1.1.2",
-    "karma-jasmine-html-reporter": "1.1.0",
-    "protractor": "5.3.0",
+    "protractor": "^5.3.2",
     "ts-node": "6.0.5",
     "tslint": "5.10.0",
-    "typescript": "2.7",
-    "@angular-devkit/build-angular": "~0.6.5"
+    "typescript": "2.7"
   },
   "engines": {
     "node": ">= 8.11.2",
